[package]
name = "pit-core"
version = "0.4.2"
edition = "2021"
license = "CC0-1.0"
description = "Portal Interface Types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "2", default-features = false, features = ["display"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
nom = { version = "8", default-features = false, features = ["alloc"] }
sha3 = { version = "0.10.8", default-features = false }
